<resources>
    <string name="app_name">Siêu thị điện tử</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="required_fullname">TÊN ĐĂNG NHẬP<font color='#FF0000'>*</font><string>:</string></string>
    <string name="required_firstname">HỌ<font color='#FF0000'>*</font><string>:</string></string>
    <string name="required_lastname">TÊN<font color='#FF0000'>*</font><string>:</string></string>
    <string name="required_phone">SỐ ĐIỆN THOẠI<font color='#FF0000'>*</font><string>:</string></string>
    <string name="required_password">MẬT KHẨU<font color='#FF0000'>*</font><string>:</string></string>
    <string name="required_reenter_password">NHẬP LẠI MẬT KHẨU<font color='#FF0000'>*</font><string>:</string></string>
    <string name="required_gender">GIỚI TÍNH<font color='#FF0000'>*</font><string>:</string></string>

    <string name="facebook_app_id">1171447170220417</string>
    <string name="fb_login_protocol_scheme">fb1171447170220417</string>
    <string name="facebook_client_token">f93a924c9cd228a51f48724832c41413</string>
</resources>