<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="85dp"
            android:layout_height="79dp"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="340dp"
            android:layout_height="52dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/inter_bold"
                android:text="@string/required_fullname"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/input_text"
                android:ems="10"
                android:hint="Tên đăng nhập"
                android:inputType="text"
                android:paddingLeft="8dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="340dp"
            android:layout_height="52dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="52dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvFirstname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/required_firstname"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtFirstname"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/input_text"
                    android:ems="10"
                    android:hint="Họ"
                    android:inputType="text"
                    android:paddingLeft="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="52dp"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvLastname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/required_lastname"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtLastname"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/input_text"
                    android:ems="10"
                    android:hint="Tên"
                    android:inputType="text"
                    android:paddingLeft="8dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="340dp"
            android:layout_height="52dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/inter_bold"
                android:text="@string/required_phone"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/input_text"
                android:ems="10"
                android:hint="Số điện thoại"
                android:inputType="text"
                android:paddingLeft="8dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="340dp"
            android:layout_height="52dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/inter_bold"
                android:text="@string/required_password"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:layout_weight="1"
                android:background="@drawable/input_text"
                android:ems="10"
                android:hint="Mật khẩu"
                android:inputType="textPassword"
                android:paddingLeft="8dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="340dp"
            android:layout_height="52dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

            <TextView
                android:id="@+id/tvRePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/inter_bold"
                android:text="@string/required_reenter_password"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtRePassword"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:layout_weight="1"
                android:background="@drawable/input_text"
                android:ems="10"
                android:hint="Nhập lại mật khẩu"
                android:inputType="textPassword"
                android:paddingLeft="8dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="340dp"
            android:layout_height="22dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="85dp"
                android:layout_height="22dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/required_gender"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rdgGender"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdMale"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:text="NAM"
                    android:textSize="14dp" />

                <RadioButton
                    android:id="@+id/rdFemale"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:text="NỮ"
                    android:textSize="14dp" />

                <RadioButton
                    android:id="@+id/rdOther"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:text="KHÁC"
                    android:textSize="14dp" />
            </RadioGroup>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            android:layout_width="340dp"
            android:layout_height="52dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/main_color"
            android:text="TIẾP THEO"
            app:cornerRadius="11dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>